Added Ren-jie's plot in the right place
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@93 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -147,22 +147,19 @@ benchmark points are shown in Table~\ref{table:x-sec}
 
 \begin{figure}[h!]
   \centering  
-% %   \subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
-% %   different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET}]{%
-% %       \includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
-% %     }%TODO: add this + equivalent plot of MET to appendix
   \subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
-  different mediator mass choices, for a DM mass of ?? GeV.\label{fig:DMV_EW_gamma_MET}]{%
-      \includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
-    }%TODO: add equivalent plot of MET to appendix
+  different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET}]{%
+      \includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
+    }%TODO: add this + equivalent plot of MET to appendix
     \hfill
   \subfloat[Leading photon transverse momentum distribution for the photon+MET final state, 
   for different DM mass choices, with a mediator mass of 1 TeV.\label{fig:DMV_EW_gamma_pT}]{%
       \includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_mV1000GeV}
     }%TODO: add equivalent plot of MET to appendix
     \hfill
-  \subfloat[Missing transverse momentum distribution for the leptonic Z+MET final state.\label{fig:DMV_EW_Z_MET}]{%
-      \includegraphics[width=0.45\textwidth]{figures/llug}
+  \subfloat[Missing transverse momentum distribution for the leptonic Z+MET final state, 
+  for different mediator mass choices, for a DM mass of 15 GeV\label{fig:DMV_EW_Z_MET}]{%
+      \includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
     }    
   \subfloat[Transverse mass ($m_T$) for the leptonic W+MET final state.\label{fig:DMV_EW_Wlep_mT}]{%
       \includegraphics[width=0.45\textwidth]{figures/gull}
