Added/reworked ttbar section from tmp/ directory. Scalar theory section should be moved to monojet section.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@94 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -63,6 +63,44 @@
 
 \linenumbers
 
+
+
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+%Symbols for TTBar section
+\def\invfb   {\ensuremath{\mbox{\,fb}^{-1}}\xspace}
+\newcommand{\mev}{\ensuremath{\mathrm{\,Me\kern -0.1em V}}\xspace}
+\newcommand{\mevc}{\ensuremath{{\mathrm{\,Me\kern -0.1em V\!/}c}}\xspace}
+\newcommand{\mevcc}{\ensuremath{{\mathrm{\,Me\kern -0.1em V\!/}c^2}}\xspace}
+\newcommand{\gev}{\ensuremath{\mathrm{\,Ge\kern -0.1em V}}\xspace}
+\newcommand{\gevc}{\ensuremath{{\mathrm{\,Ge\kern -0.1em V\!/}c}}\xspace}
+\newcommand{\gevcnospace}{\ensuremath{{\mathrm{\,Ge\kern -0.1em V\!/}c}}}
+\newcommand{\gevcc}{\ensuremath{{\mathrm{\,Ge\kern -0.1em V\!/}c^2}}\xspace}
+\newcommand{\bea}{\begin{eqnarray}}
+\newcommand{\eea}{\end{eqnarray}}
+
+\def\beq{\begin{equation}}
+\def\eeq{\end{equation}}
+\def\bea{\begin{eqnarray}}
+\def\eea{\end{eqnarray}}
+
+\newcommand{\gsim}{ \mathop{}_{\textstyle \sim}^{\textstyle >} }
+\newcommand{\lsim}{ \mathop{}_{\textstyle \sim}^{\textstyle <} }
+\newcommand{\ev}{{\rm eV}}
+\newcommand{\kms}{{\rm km/s}}
+\newcommand{\kev}{{\rm keV}}
+\newcommand{\Mev}{{\rm MeV}}
+
+\def\missET {\slashed{E}_T}
+\def \bm#1{\mbox{\boldmath$#1$\unboldmath}} 
+\def \myeq#1{(\ref{#1})}
+
+%TODO: make sure all symbols are consistent...
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%
+
 \begin{document}
 
 \morefloats
