--- a/doc/tex/DMHFModels.tex
+++ b/doc/tex/DMHFModels.tex
@@ -1,16 +1,12 @@
-\subsection{Specific models for analyses of MET+b quark(s)}
-
-\subsection{$b \bar{b}$+MET models}
+\section{$b \bar{b}$+MET models}
 
 \input{tex/BBBar.tex}
 
-\subsection{Models with a single $b-$quark + MET}
+\section{Models with a single $b-$quark + MET}
 
 \input{tex/SingleB.tex}
 
-\section{Specific models for analyses of MET+top quark(s)}
-
-\subsection{$t \bar{t}$+MET models}
+\section{$t \bar{t}$+MET models}
 
 \input{tex/TTBar.tex}
 
