--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -212,6 +212,7 @@ The presentation of the results in the $g_q$--$\gDM$ plane for fixed masses bene
 
 
 \section{Scalar and pseudoscalar mediator, s-channel exchange}
+\label{sec:monojet_scalar}
 
 %TODO add figure with diagrams
 
