Added appendix tables for ttbar
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@95 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -7,7 +7,7 @@
 \usepackage{epstopdf}
 % \usepackage{appendix}
 \usepackage{xspace} %for single top
-
+\usepackage{longtable} %for ttbar 
 \usepackage{slashed}
 \usepackage{amsfonts}
 \usepackage{amsmath,amssymb}
@@ -155,6 +155,10 @@
 \chapter{Appendix: Detailed studies for EW models}
 \label{app:EWSpecificModels_Appendix}
 \input{tex/EWSpecificModels_Appendix.tex}
+
+\chapter{Appendix: Table of cross sections for $t\bar{t}$+MET searches}
+\label{app:TTBar_Xsecs}
+\input{tex/TTBar_Xsecs_Appendix.tex}
 
 %%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
 % \bibliographystyle{unsrtnat}
