--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -5,7 +5,7 @@ In this document we consider only two of the possible choices for this simplifie
 %%CD: this sentence really belongs elsewhere: MG does not have the gluon loop
 Couplings to the SM fermions can be arranged by mixing with the SM Higgs. Such models have interesting connections with Higgs physics, and can be viewed as generalizations of the Higgs portal to DM. The most general scalar mediator models will have renormalizable interactions between the SM Higgs and the new scalar $\phi$ or pseudoscalar $a$, as well as $\phi/a$ interactions with electroweak gauge bosons. Such interactions are model dependent, often subject to constraints from electroweak precision tests, and would suggest specialized searches which cannot be generalized to a broad class of models (unlike, for instance, the $\missET+\textrm{jets}$ searches). As a result, for this class of minimal simplified models with spin-$0$ mediators, we will focus primarily on couplings to fermions and loop-induced couplings to gluons. Possible couplings to the electroweak sector may also lead to interesting DM phenomenology that can be studied in the context of Higgs Portal DM.
 
-\subsection{Fermionic DM}
+\subsection{Model and assumption for fermionic DM}
 
 Minimal Flavor Violation (MFV) implies that scalar couplings to fermions will be proportional to the fermion mass.  However, they can differ for up- and down-type quarks and for charged leptons. 
 
@@ -45,7 +45,7 @@ f_a (\tau) =  \tau \arctan^2 \left ( \frac{1}{\sqrt{\tau-1}} \right ) \,.
 
 The first term in each width corresponds to the decay into SM fermions, and the sum runs over all kinematically available fermions, $N_c = 3$ for quarks and $N_c = 1$ for leptons. The second term is the decay into DM, assuming that is kinematically allowed. The factor of two between the decay into SM  fermions and into DM  is a result of our choice of normalization of the Yukawa couplings due to spin dependencies. The last two terms correspond to decay into gluons.  Since we have assumed that $g_v = g_u = g_d = g_\ell$, we have included in the partial decay widths $\Gamma (\phi/a \to gg)$ only the contributions stemming from top loops, which provide the by far largest corrections given that $y_t \gg y_b$~etc. At the loop level the mediators can decay not only to gluons but also to pairs of photons and other final states if kinematical accessible. However the decay rates $\Gamma (\phi/a \to gg)$ are always larger than the other loop-induced partial widths, and in consequence the total decay widths $\Gamma_{\phi/a}$ are well approximated by the corresponding sum of the individual partial decay widths involving DM, fermion or gluon pairs. It should be noted that if  $m_{\phi/a} > 2m_t$ the total widths of $\phi/a$ will typically be dominated by the partial widths to top quarks.
 
-\subsection{Fermionic DM}
+\subsection{Parameter scan}
 
 As discussed in Sec.~\ref{sec:scalar}, the MFV assumption for spin-$0$ mediators leads to quark mass dependent Yukawa couplings, and therefore dominant couplings to top quarks. This motivates dedicated DM+$t\bar{t}$ searches. 
 The benchmark chosen for these searches follows the assumptions mentioned in the previous Section: we consider 
@@ -116,7 +116,7 @@ Another case where the width can impact the kinematics is when $m_{\phi,a}$ is s
 \end{center}
 \end{figure}
 
-Given that the kinematics are similar for all couplings $\sim O(1)$, we recommend to generate only samples with $g_{\chi} = g_{v} = 1$. It follows from this that these benchmark points should be a good approximation for non-unity couplings and for $g_{\chi} \neq g_{v}$, provided that the sample is rescaled to the appropriate cross section times branching ratio. While a simple scaling function \textbf{[CD: which?]} is sufficient for a limited range of coupling values (see Fig.~\ref{fig:xsec_scaling} for example), we also choose to provide instead a table of cross section times branching ratio values over a large range of couplings to support interpretation of search results (see the Appendix~\ref{subsec:xsectable}). The table lists couplings from $g=0.1$ to $g=3.5$, where the upper limit is chosen to close to the perturbative limit.
+Given that the kinematics are similar for all couplings $\sim O(1)$, we recommend to generate only samples with $g_{\chi} = g_{v} = 1$. It follows from this that these benchmark points should be a good approximation for non-unity couplings and for $g_{\chi} \neq g_{v}$, provided that the sample is rescaled to the appropriate cross section times branching ratio. While a simple scaling function \textbf{[CD: which?]} is sufficient for a limited range of coupling values (see Fig.~\ref{fig:xsec_scaling} for example), we also choose to provide instead a table of cross section times branching ratio values over a large range of couplings to support interpretation of search results (see the Appendix~\ref{app:TTBar_Xsecs}). The table lists couplings from $g=0.1$ to $g=3.5$, where the upper limit is chosen to close to the perturbative limit.
 
 \begin{figure}[!ht]
 \begin{center}
